# brazildata

./: COPYING.md  Cargo.toml  README.md
share/: hdf-example-dump.txt
src/: casos_e_pluviosidade.rs  coordinates.rs  easycsv.rs  main.rs  recent1.rs  recent2.rs  recent3.rs  recent4.rs  recent5.rs  recent6.rs  recent7.rs  recent8.rs  staticdatabase.rs  util.rs
src/casos_e_pluviosidade/: casos_por_regiao.rs  cidades_do_acre.rs
