[package]
name = "brazildata"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.14"
thiserror = "1.0"
kstring = "1.0"
genawaiter = { version = "0.99", default-features = false }
num = "0.4"
utf-8 = "^0.7.5"
csv = "1.2.1"
serde = { version = "1.0.154", features = ["derive"] }
enum-map = "2.4.1"

[dev-dependencies]
clap = { version = "^3.2.1", features = ["derive"] }

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
