[package]
name = "brazildata"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.14"
thiserror = "1.0"
kstring = "1.0"
genawaiter = { version = "0.99", default-features = false }
num = "0.4"
utf-8 = "^0.7.5"
csv = "1.2.1"
serde = { version = "1.0.154", features = ["derive"] }
enum-map = "2.4.1"
chrono = "^0.4"
# 0.6's (indirect) dependency phf_codegen can't be handled with cargo 1.46.0
# [Does not matter any more though]
#chrono-tz = "0.5.3"
nav-types = "0.5.1"
regex = "1.7.0"
lazy_static = "1.4.0"
hdf5 = "0.8"

[dev-dependencies]
clap = { version = "^3.2.1", features = ["derive"] }

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
